completed js functioanlity for password validation

--- a/weekOne-PasswordAuth/index.html
+++ b/weekOne-PasswordAuth/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container flex flex-col align-center px-20 mx-auto mt-32 space-y-0 ">
         <h1 class="text-l max-w-md text-left mb-2">Password:</h1>
-        <form action="" class="border-solid border-black">
+        <form action="" class="border-solid border-black" id="passwordEntry1" onsubmit="return false;">
             <input id='passwordEntry' type="text" placeholder="Enter Password" class="mb-3 text-l pr-14 pl-2 border-solid border-slate-700 border-2 rounded-md">
         </form>
    
