--- a/weekOne-PasswordAuth/index.html
+++ b/weekOne-PasswordAuth/index.html
@@ -11,11 +11,12 @@
 <body>
     <div class="container flex flex-col align-center px-20 mx-auto mt-32 space-y-0 ">
         <h1 class="text-l max-w-md text-left mb-2">Password:</h1>
-        <form action="" class="border-solid border-black" id="passwordEntry1" onsubmit="return false;">
-            <input id='passwordEntry' type="text" placeholder="Enter Password" class="mb-3 text-l pr-14 pl-2 border-solid border-slate-700 border-2 rounded-md">
+        <form action="" class="border-solid border-black flex flex-row" id="passwordEntry1" onsubmit="return false;">
+            <input id='passwordEntry' type="password" placeholder="Enter Password" class="mb-3 text-l pr-14 pl-2 border-solid border-slate-700 border-2 rounded-md">
+            <button class="border-solid border-black border-1 rounded-md"><i class="fa-solid fa-eye" id="psswrd" ></i></button>
         </form>
    
-        <div class="container flex flex-col align-center pr-10 pl-2 py-4 my-10  bg-slate-700 border-slate-700 border-1 rounded-md ">
+        <div class="container flex flex-col align-center pr-10 pl-2 py-4 my-10 w-72 bg-slate-700 border-slate-700 border-1 rounded-md md:w-72 md:mx-32  lg:w-72 lg:mx-80 xl:w-72 xl:mx-80">
             <ul class="">
                 <li id= 'lowerCaseCheck' class="text-slate-500"><i class="fa-solid fa-check"></i> Lower-case letter</li>
                 <li id= 'upperCaseCheck' class="text-slate-500"><i class="fa-solid fa-check"></i> Upper-case letter</li>
